--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pipeline-builder",
   "version": "0.0.0",
-  "description": "Small description for pipeline-builder goes here",
+  "description": "Building Big Data pipelines in mu.semte.ch",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -16,7 +16,7 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Erika Pauwels <erika.pauwels@gmail.com>, Aad Versteden <madnificent@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
