--- a/package.json
+++ b/package.json
@@ -30,13 +30,21 @@
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-materialize": "0.18.8",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "1.0.0-beta.1",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composability": "0.1.3",
     "ember-data": "^2.4.2",
     "ember-export-application-global": "^1.0.5",
+    "ember-key-responder": "0.4.2",
+    "ember-legacy-views": "0.2.0",
     "ember-load-initializers": "^0.5.1",
+    "ember-modal-dialog": "0.8.3",
+    "ember-new-computed": "1.0.3",
+    "ember-radio-button": "1.0.7",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.1"
   }
