--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-new-computed": "1.0.3",
     "ember-radio-button": "1.0.7",
     "ember-resolver": "^2.0.3",
+    "ember-sortable": "1.8.1",
     "loader.js": "^4.0.1"
   }
 }
