--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   app:
-    image: bde2020/pipeline-builder:0.1.0
+    image: bde2020/pipeline-builder-frontend:0.1.0
     links:
       - identifier:backend
     ports:
@@ -11,7 +11,7 @@ services:
   dispatcher:
     image: semtech/mu-dispatcher:1.0.1
     volumes:
-      - ./mu/config:/config
+      - ./config:/config
   database:
     image: tenforce/virtuoso:1.0.0-virtuoso7.2.2
     environment:
@@ -19,6 +19,6 @@ services:
     ports:
       - "8890:8890"
     volumes:
-      - ./mu/data/db:/data
+      - ./data/db:/data
   pipeline:
     image: bde2020/pipeline-service:0.1.0
